[project]
name = "tw-cui-util"
description = "A collection of custom nodes to help with saving images, providing generation parameters, static literal nodes, and other useful nodes."
version = "1.0.0"
license = "GPL-3.0"
dependencies = ["torch~=2.1.2+cu121", "piexif~=1.1.3", "numpy~=1.26.2", "Pillow~=9.5.0"]

[project.urls]
Repository = "https://github.com/TW-CUI/TW-CUI-Util"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "twcui"
DisplayName = "TW-CUI: Utility Nodes"
Icon = "icon.png"
